--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="theme-color" content="#70c5ce" />
     <title>Pro Flappy Bird</title>
   </head>
   <body>
@@ -10,4 +12,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
   </html>
-
